<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/username"
        android:text="@string/input_username"
        android:textColor="@color/login_text_secondary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/username"
        style="@style/Input.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:privateImeOptions="horizontalAlignment=right"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/password"
        android:text="@string/input_password"
        android:textColor="@color/login_text_secondary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        style="@style/Input.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/input_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:privateImeOptions="horizontalAlignment=right"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/login_error_text"
        android:textSize="14sp" />

    <Button
        android:id="@+id/confirm"
        style="@style/Button.Default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/action_login"
        android:textSize="16sp" />
</LinearLayout>
